; ModuleID = '/home/carl/AnghaBench/Cinder/src/glfw/src/extr_posix_tls.c__glfwInitThreadLocalStoragePOSIX.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glfw/src/extr_posix_tls.c__glfwInitThreadLocalStoragePOSIX.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GLFW_PLATFORM_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"POSIX: Failed to create context TLS\00", align 1
@GLFW_FALSE = common dso_local global i32 0, align 4
@GLFW_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_glfwInitThreadLocalStoragePOSIX() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 @pthread_key_create(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 1), i32* null)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i32, i32* @GLFW_PLATFORM_ERROR, align 4
  %6 = call i32 @_glfwInputError(i32 %5, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* @GLFW_FALSE, align 4
  store i32 %7, i32* %1, align 4
  br label %11

8:                                                ; preds = %0
  %9 = load i32, i32* @GLFW_TRUE, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 4
  %10 = load i32, i32* @GLFW_TRUE, align 4
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %8, %4
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i64 @pthread_key_create(i32*, i32*) #1

declare dso_local i32 @_glfwInputError(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
